// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SecretsConstruct — snapshot mwitt template matches snapshot 1`] = `
{
  "Outputs": {
    "KeyRotationKeyRotationLambdaArn46C8C71B": {
      "Description": "Orbital mwitt key-rotation Lambda ARN",
      "Export": {
        "Name": "OrbitalHub-mwitt-KeyRotationLambdaArn",
      },
      "Value": {
        "Fn::GetAtt": [
          "KeyRotationFn1D4F9646",
          "Arn",
        ],
      },
    },
    "KeyRotationKeyRotationScheduleName9F6010D1": {
      "Description": "Orbital mwitt key-rotation EventBridge schedule rule",
      "Export": {
        "Name": "OrbitalHub-mwitt-KeyRotationScheduleName",
      },
      "Value": {
        "Ref": "KeyRotationSchedule19A31C3E",
      },
    },
    "SecretsGithubWebhookSecretArn50A4CA7E": {
      "Description": "Orbital mwitt GitHub webhook secret ARN",
      "Export": {
        "Name": "OrbitalHub-mwitt-GithubWebhookSecretArn",
      },
      "Value": {
        "Ref": "SecretsGithubWebhookSecretA73A31FD",
      },
    },
    "SecretsHubMasterKeyKmsCmkArnA56548AF": {
      "Description": "Orbital mwitt hub-secrets KMS CMK ARN",
      "Export": {
        "Name": "OrbitalHub-mwitt-HubMasterKeyKmsCmkArn",
      },
      "Value": {
        "Fn::GetAtt": [
          "SecretsHubMasterKeyKmsCmkDAD54FF7",
          "Arn",
        ],
      },
    },
    "SecretsHubMasterKeySecretArn7A82A579": {
      "Description": "Orbital mwitt hub master key secret ARN",
      "Export": {
        "Name": "OrbitalHub-mwitt-HubMasterKeySecretArn",
      },
      "Value": {
        "Ref": "SecretsHubMasterKeySecret84067CE9",
      },
    },
  },
  "Parameters": {
    "BootstrapVersion": {
      "Default": "/cdk-bootstrap/hnb659fds/version",
      "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Resources": {
    "DbMasterSecret80A406EE": {
      "DeletionPolicy": "Delete",
      "Properties": {
        "Description": {
          "Fn::Join": [
            "",
            [
              "Generated by the CDK for stack: ",
              {
                "Ref": "AWS::StackName",
              },
            ],
          ],
        },
        "GenerateSecretString": {
          "ExcludeCharacters": " %+~\`#$&*()|[]{}:;<>?!'/@"\\",
          "GenerateStringKey": "password",
          "PasswordLength": 30,
          "SecretStringTemplate": "{"username":"orbital_admin"}",
        },
        "Name": "/orbital/mwitt/aurora/master-credentials",
      },
      "Type": "AWS::SecretsManager::Secret",
      "UpdateReplacePolicy": "Delete",
    },
    "DbMasterSecretDbMasterCredsRotation59EB30BB": {
      "Properties": {
        "HostedRotationLambda": {
          "ExcludeCharacters": " %+~\`#$&*()|[]{}:;<>?!'/@"\\",
          "RotationLambdaName": "orbital-mwitt-db-creds-rotation",
          "RotationType": "PostgreSQLSingleUser",
        },
        "RotationRules": {
          "ScheduleExpression": "rate(30 days)",
        },
        "SecretId": {
          "Ref": "DbMasterSecret80A406EE",
        },
      },
      "Type": "AWS::SecretsManager::RotationSchedule",
    },
    "DbMasterSecretPolicyFB68FF74": {
      "Properties": {
        "ResourcePolicy": {
          "Statement": [
            {
              "Action": "secretsmanager:DeleteSecret",
              "Effect": "Deny",
              "Principal": {
                "AWS": {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":iam::123456789012:root",
                    ],
                  ],
                },
              },
              "Resource": "*",
            },
          ],
          "Version": "2012-10-17",
        },
        "SecretId": {
          "Ref": "DbMasterSecret80A406EE",
        },
      },
      "Type": "AWS::SecretsManager::ResourcePolicy",
    },
    "KeyRotationExecutionRole5679977C": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "Description": "Orbital mwitt hub master key rotation Lambda role",
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
        "Tags": [
          {
            "Key": "orbital:component",
            "Value": "key-rotation",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "KeyRotationExecutionRoleDefaultPolicy6C56106F": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "secretsmanager:GetSecretValue",
                "secretsmanager:DescribeSecret",
              ],
              "Effect": "Allow",
              "Resource": {
                "Ref": "SecretsHubMasterKeySecret84067CE9",
              },
            },
            {
              "Action": [
                "secretsmanager:PutSecretValue",
                "secretsmanager:UpdateSecret",
              ],
              "Effect": "Allow",
              "Resource": {
                "Ref": "SecretsHubMasterKeySecret84067CE9",
              },
            },
            {
              "Action": [
                "kms:Decrypt",
                "kms:Encrypt",
                "kms:ReEncrypt*",
                "kms:GenerateDataKey*",
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::GetAtt": [
                  "SecretsHubMasterKeyKmsCmkDAD54FF7",
                  "Arn",
                ],
              },
            },
            {
              "Action": [
                "secretsmanager:UpdateSecretVersionStage",
                "secretsmanager:DescribeSecret",
              ],
              "Effect": "Allow",
              "Resource": {
                "Ref": "SecretsHubMasterKeySecret84067CE9",
              },
            },
            {
              "Action": [
                "secretsmanager:CreateSecret",
                "secretsmanager:PutSecretValue",
                "secretsmanager:GetSecretValue",
                "secretsmanager:DescribeSecret",
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    {
                      "Ref": "SecretsHubMasterKeySecret84067CE9",
                    },
                    ".prev*",
                  ],
                ],
              },
            },
            {
              "Action": "secretsmanager:CreateSecret",
              "Condition": {
                "StringLike": {
                  "secretsmanager:Name": "orbital/mwitt/hub-master-key.prev*",
                },
              },
              "Effect": "Allow",
              "Resource": "*",
            },
            {
              "Action": [
                "xray:PutTraceSegments",
                "xray:PutTelemetryRecords",
              ],
              "Effect": "Allow",
              "Resource": "*",
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "KeyRotationExecutionRoleDefaultPolicy6C56106F",
        "Roles": [
          {
            "Ref": "KeyRotationExecutionRole5679977C",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "KeyRotationFn1D4F9646": {
      "DependsOn": [
        "KeyRotationExecutionRoleDefaultPolicy6C56106F",
        "KeyRotationExecutionRole5679977C",
      ],
      "Properties": {
        "Code": {
          "S3Bucket": "cdk-hnb659fds-assets-123456789012-us-east-1",
          "S3Key": "48bd4184c0fe4b3c5bbe48286780b6c064a8d8cdcaf2a0d1a87b0b52b8e69805.zip",
        },
        "FunctionName": "orbital-mwitt-key-rotation",
        "Handler": "index.handler",
        "LoggingConfig": {
          "LogGroup": {
            "Ref": "KeyRotationLogGroupB19E1885",
          },
        },
        "MemorySize": 256,
        "Role": {
          "Fn::GetAtt": [
            "KeyRotationExecutionRole5679977C",
            "Arn",
          ],
        },
        "Runtime": "nodejs22.x",
        "Tags": [
          {
            "Key": "orbital:component",
            "Value": "key-rotation",
          },
        ],
        "Timeout": 120,
        "TracingConfig": {
          "Mode": "Active",
        },
      },
      "Type": "AWS::Lambda::Function",
    },
    "KeyRotationLogGroupB19E1885": {
      "DeletionPolicy": "Delete",
      "Properties": {
        "LogGroupName": "/orbital/mwitt/lambda/key-rotation",
        "RetentionInDays": 30,
        "Tags": [
          {
            "Key": "orbital:component",
            "Value": "key-rotation",
          },
        ],
      },
      "Type": "AWS::Logs::LogGroup",
      "UpdateReplacePolicy": "Delete",
    },
    "KeyRotationSchedule19A31C3E": {
      "Properties": {
        "Description": "Rotate the Orbital hub master key every 90 days.",
        "Name": "orbital-mwitt-key-rotation-schedule",
        "ScheduleExpression": "rate(90 days)",
        "State": "ENABLED",
        "Targets": [
          {
            "Arn": {
              "Fn::GetAtt": [
                "KeyRotationFn1D4F9646",
                "Arn",
              ],
            },
            "Id": "Target0",
            "InputTransformer": {
              "InputPathsMap": {
                "id": "$.id",
              },
              "InputTemplate": {
                "Fn::Join": [
                  "",
                  [
                    "{"Step":"full","SecretId":"",
                    {
                      "Ref": "SecretsHubMasterKeySecret84067CE9",
                    },
                    "","ClientRequestToken":<id>}",
                  ],
                ],
              },
            },
          },
        ],
      },
      "Type": "AWS::Events::Rule",
    },
    "KeyRotationScheduleAllowEventRuleTestSecretsStackmwittKeyRotationFn39D0ADC339CF47C2": {
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "KeyRotationFn1D4F9646",
            "Arn",
          ],
        },
        "Principal": "events.amazonaws.com",
        "SourceArn": {
          "Fn::GetAtt": [
            "KeyRotationSchedule19A31C3E",
            "Arn",
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "SecretsGithubWebhookSecretA73A31FD": {
      "DeletionPolicy": "Delete",
      "Properties": {
        "Description": "Orbital mwitt - GitHub webhook HMAC verification secret.",
        "GenerateSecretString": {
          "ExcludeCharacters": " 	

"'\\",
          "ExcludePunctuation": true,
          "ExcludeUppercase": false,
          "IncludeSpace": false,
          "PasswordLength": 64,
        },
        "KmsKeyId": {
          "Fn::GetAtt": [
            "SecretsHubMasterKeyKmsCmkDAD54FF7",
            "Arn",
          ],
        },
        "Name": "orbital/mwitt/github-webhook-secret",
        "Tags": [
          {
            "Key": "orbital:component",
            "Value": "secrets",
          },
        ],
      },
      "Type": "AWS::SecretsManager::Secret",
      "UpdateReplacePolicy": "Delete",
    },
    "SecretsHubMasterKeyKmsCmkAlias36429E7C": {
      "Properties": {
        "AliasName": "alias/orbital-mwitt-hub-secrets",
        "TargetKeyId": {
          "Fn::GetAtt": [
            "SecretsHubMasterKeyKmsCmkDAD54FF7",
            "Arn",
          ],
        },
      },
      "Type": "AWS::KMS::Alias",
    },
    "SecretsHubMasterKeyKmsCmkDAD54FF7": {
      "DeletionPolicy": "Delete",
      "Properties": {
        "Description": "Orbital hub master key + cognito secret CMK - mwitt",
        "EnableKeyRotation": true,
        "KeyPolicy": {
          "Statement": [
            {
              "Action": "kms:*",
              "Effect": "Allow",
              "Principal": {
                "AWS": {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":iam::123456789012:root",
                    ],
                  ],
                },
              },
              "Resource": "*",
            },
            {
              "Action": [
                "kms:Decrypt",
                "kms:Encrypt",
                "kms:ReEncrypt*",
                "kms:GenerateDataKey*",
              ],
              "Condition": {
                "StringEquals": {
                  "kms:ViaService": "secretsmanager.us-east-1.amazonaws.com",
                },
              },
              "Effect": "Allow",
              "Principal": {
                "AWS": {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":iam::123456789012:root",
                    ],
                  ],
                },
              },
              "Resource": "*",
            },
            {
              "Action": [
                "kms:CreateGrant",
                "kms:DescribeKey",
              ],
              "Condition": {
                "StringEquals": {
                  "kms:ViaService": "secretsmanager.us-east-1.amazonaws.com",
                },
              },
              "Effect": "Allow",
              "Principal": {
                "AWS": {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":iam::123456789012:root",
                    ],
                  ],
                },
              },
              "Resource": "*",
            },
            {
              "Action": "kms:Decrypt",
              "Condition": {
                "StringEquals": {
                  "kms:ViaService": "secretsmanager.us-east-1.amazonaws.com",
                },
              },
              "Effect": "Allow",
              "Principal": {
                "AWS": {
                  "Fn::GetAtt": [
                    "KeyRotationExecutionRole5679977C",
                    "Arn",
                  ],
                },
              },
              "Resource": "*",
            },
            {
              "Action": [
                "kms:Encrypt",
                "kms:ReEncrypt*",
                "kms:GenerateDataKey*",
              ],
              "Condition": {
                "StringEquals": {
                  "kms:ViaService": "secretsmanager.us-east-1.amazonaws.com",
                },
              },
              "Effect": "Allow",
              "Principal": {
                "AWS": {
                  "Fn::GetAtt": [
                    "KeyRotationExecutionRole5679977C",
                    "Arn",
                  ],
                },
              },
              "Resource": "*",
            },
          ],
          "Version": "2012-10-17",
        },
        "Tags": [
          {
            "Key": "orbital:component",
            "Value": "secrets",
          },
        ],
      },
      "Type": "AWS::KMS::Key",
      "UpdateReplacePolicy": "Delete",
    },
    "SecretsHubMasterKeySecret84067CE9": {
      "DeletionPolicy": "Delete",
      "Properties": {
        "Description": "Orbital mwitt hub Ed25519 master keypair (rotated every 90 days).",
        "GenerateSecretString": {
          "ExcludePunctuation": true,
          "GenerateStringKey": "rotationToken",
          "SecretStringTemplate": "{"uninitialized":true,"publicKey":"PENDING_ROTATION","privateKey":"PENDING_ROTATION"}",
        },
        "KmsKeyId": {
          "Fn::GetAtt": [
            "SecretsHubMasterKeyKmsCmkDAD54FF7",
            "Arn",
          ],
        },
        "Name": "orbital/mwitt/hub-master-key",
        "Tags": [
          {
            "Key": "orbital:component",
            "Value": "secrets",
          },
        ],
      },
      "Type": "AWS::SecretsManager::Secret",
      "UpdateReplacePolicy": "Delete",
    },
  },
  "Rules": {
    "CheckBootstrapVersion": {
      "Assertions": [
        {
          "Assert": {
            "Fn::Not": [
              {
                "Fn::Contains": [
                  [
                    "1",
                    "2",
                    "3",
                    "4",
                    "5",
                  ],
                  {
                    "Ref": "BootstrapVersion",
                  },
                ],
              },
            ],
          },
          "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.",
        },
      ],
    },
  },
  "Transform": "AWS::SecretsManager-2020-07-23",
}
`;

exports[`SecretsConstruct — snapshot prod template matches snapshot 1`] = `
{
  "Outputs": {
    "KeyRotationKeyRotationLambdaArn46C8C71B": {
      "Description": "Orbital prod key-rotation Lambda ARN",
      "Export": {
        "Name": "OrbitalHub-prod-KeyRotationLambdaArn",
      },
      "Value": {
        "Fn::GetAtt": [
          "KeyRotationFn1D4F9646",
          "Arn",
        ],
      },
    },
    "KeyRotationKeyRotationScheduleName9F6010D1": {
      "Description": "Orbital prod key-rotation EventBridge schedule rule",
      "Export": {
        "Name": "OrbitalHub-prod-KeyRotationScheduleName",
      },
      "Value": {
        "Ref": "KeyRotationSchedule19A31C3E",
      },
    },
    "SecretsGithubWebhookSecretArn50A4CA7E": {
      "Description": "Orbital prod GitHub webhook secret ARN",
      "Export": {
        "Name": "OrbitalHub-prod-GithubWebhookSecretArn",
      },
      "Value": {
        "Ref": "SecretsGithubWebhookSecretA73A31FD",
      },
    },
    "SecretsHubMasterKeyKmsCmkArnA56548AF": {
      "Description": "Orbital prod hub-secrets KMS CMK ARN",
      "Export": {
        "Name": "OrbitalHub-prod-HubMasterKeyKmsCmkArn",
      },
      "Value": {
        "Fn::GetAtt": [
          "SecretsHubMasterKeyKmsCmkDAD54FF7",
          "Arn",
        ],
      },
    },
    "SecretsHubMasterKeySecretArn7A82A579": {
      "Description": "Orbital prod hub master key secret ARN",
      "Export": {
        "Name": "OrbitalHub-prod-HubMasterKeySecretArn",
      },
      "Value": {
        "Ref": "SecretsHubMasterKeySecret84067CE9",
      },
    },
  },
  "Parameters": {
    "BootstrapVersion": {
      "Default": "/cdk-bootstrap/hnb659fds/version",
      "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Resources": {
    "DbMasterSecret80A406EE": {
      "DeletionPolicy": "Delete",
      "Properties": {
        "Description": {
          "Fn::Join": [
            "",
            [
              "Generated by the CDK for stack: ",
              {
                "Ref": "AWS::StackName",
              },
            ],
          ],
        },
        "GenerateSecretString": {
          "ExcludeCharacters": " %+~\`#$&*()|[]{}:;<>?!'/@"\\",
          "GenerateStringKey": "password",
          "PasswordLength": 30,
          "SecretStringTemplate": "{"username":"orbital_admin"}",
        },
        "Name": "/orbital/prod/aurora/master-credentials",
      },
      "Type": "AWS::SecretsManager::Secret",
      "UpdateReplacePolicy": "Delete",
    },
    "DbMasterSecretDbMasterCredsRotation59EB30BB": {
      "Properties": {
        "HostedRotationLambda": {
          "ExcludeCharacters": " %+~\`#$&*()|[]{}:;<>?!'/@"\\",
          "RotationLambdaName": "orbital-prod-db-creds-rotation",
          "RotationType": "PostgreSQLSingleUser",
        },
        "RotationRules": {
          "ScheduleExpression": "rate(30 days)",
        },
        "SecretId": {
          "Ref": "DbMasterSecret80A406EE",
        },
      },
      "Type": "AWS::SecretsManager::RotationSchedule",
    },
    "DbMasterSecretPolicyFB68FF74": {
      "Properties": {
        "ResourcePolicy": {
          "Statement": [
            {
              "Action": "secretsmanager:DeleteSecret",
              "Effect": "Deny",
              "Principal": {
                "AWS": {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":iam::123456789012:root",
                    ],
                  ],
                },
              },
              "Resource": "*",
            },
          ],
          "Version": "2012-10-17",
        },
        "SecretId": {
          "Ref": "DbMasterSecret80A406EE",
        },
      },
      "Type": "AWS::SecretsManager::ResourcePolicy",
    },
    "KeyRotationExecutionRole5679977C": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "Description": "Orbital prod hub master key rotation Lambda role",
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
        "Tags": [
          {
            "Key": "orbital:component",
            "Value": "key-rotation",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "KeyRotationExecutionRoleDefaultPolicy6C56106F": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "secretsmanager:GetSecretValue",
                "secretsmanager:DescribeSecret",
              ],
              "Effect": "Allow",
              "Resource": {
                "Ref": "SecretsHubMasterKeySecret84067CE9",
              },
            },
            {
              "Action": [
                "secretsmanager:PutSecretValue",
                "secretsmanager:UpdateSecret",
              ],
              "Effect": "Allow",
              "Resource": {
                "Ref": "SecretsHubMasterKeySecret84067CE9",
              },
            },
            {
              "Action": [
                "kms:Decrypt",
                "kms:Encrypt",
                "kms:ReEncrypt*",
                "kms:GenerateDataKey*",
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::GetAtt": [
                  "SecretsHubMasterKeyKmsCmkDAD54FF7",
                  "Arn",
                ],
              },
            },
            {
              "Action": [
                "secretsmanager:UpdateSecretVersionStage",
                "secretsmanager:DescribeSecret",
              ],
              "Effect": "Allow",
              "Resource": {
                "Ref": "SecretsHubMasterKeySecret84067CE9",
              },
            },
            {
              "Action": [
                "secretsmanager:CreateSecret",
                "secretsmanager:PutSecretValue",
                "secretsmanager:GetSecretValue",
                "secretsmanager:DescribeSecret",
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    {
                      "Ref": "SecretsHubMasterKeySecret84067CE9",
                    },
                    ".prev*",
                  ],
                ],
              },
            },
            {
              "Action": "secretsmanager:CreateSecret",
              "Condition": {
                "StringLike": {
                  "secretsmanager:Name": "orbital/prod/hub-master-key.prev*",
                },
              },
              "Effect": "Allow",
              "Resource": "*",
            },
            {
              "Action": [
                "xray:PutTraceSegments",
                "xray:PutTelemetryRecords",
              ],
              "Effect": "Allow",
              "Resource": "*",
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "KeyRotationExecutionRoleDefaultPolicy6C56106F",
        "Roles": [
          {
            "Ref": "KeyRotationExecutionRole5679977C",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "KeyRotationFn1D4F9646": {
      "DependsOn": [
        "KeyRotationExecutionRoleDefaultPolicy6C56106F",
        "KeyRotationExecutionRole5679977C",
      ],
      "Properties": {
        "Code": {
          "S3Bucket": "cdk-hnb659fds-assets-123456789012-us-east-1",
          "S3Key": "48bd4184c0fe4b3c5bbe48286780b6c064a8d8cdcaf2a0d1a87b0b52b8e69805.zip",
        },
        "FunctionName": "orbital-prod-key-rotation",
        "Handler": "index.handler",
        "LoggingConfig": {
          "LogGroup": {
            "Ref": "KeyRotationLogGroupB19E1885",
          },
        },
        "MemorySize": 256,
        "Role": {
          "Fn::GetAtt": [
            "KeyRotationExecutionRole5679977C",
            "Arn",
          ],
        },
        "Runtime": "nodejs22.x",
        "Tags": [
          {
            "Key": "orbital:component",
            "Value": "key-rotation",
          },
        ],
        "Timeout": 120,
        "TracingConfig": {
          "Mode": "Active",
        },
      },
      "Type": "AWS::Lambda::Function",
    },
    "KeyRotationLogGroupB19E1885": {
      "DeletionPolicy": "Retain",
      "Properties": {
        "LogGroupName": "/orbital/prod/lambda/key-rotation",
        "RetentionInDays": 30,
        "Tags": [
          {
            "Key": "orbital:component",
            "Value": "key-rotation",
          },
        ],
      },
      "Type": "AWS::Logs::LogGroup",
      "UpdateReplacePolicy": "Retain",
    },
    "KeyRotationSchedule19A31C3E": {
      "Properties": {
        "Description": "Rotate the Orbital hub master key every 90 days.",
        "Name": "orbital-prod-key-rotation-schedule",
        "ScheduleExpression": "rate(90 days)",
        "State": "ENABLED",
        "Targets": [
          {
            "Arn": {
              "Fn::GetAtt": [
                "KeyRotationFn1D4F9646",
                "Arn",
              ],
            },
            "Id": "Target0",
            "InputTransformer": {
              "InputPathsMap": {
                "id": "$.id",
              },
              "InputTemplate": {
                "Fn::Join": [
                  "",
                  [
                    "{"Step":"full","SecretId":"",
                    {
                      "Ref": "SecretsHubMasterKeySecret84067CE9",
                    },
                    "","ClientRequestToken":<id>}",
                  ],
                ],
              },
            },
          },
        ],
      },
      "Type": "AWS::Events::Rule",
    },
    "KeyRotationScheduleAllowEventRuleTestSecretsStackprodKeyRotationFn12BDE84540ECCEE1": {
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "KeyRotationFn1D4F9646",
            "Arn",
          ],
        },
        "Principal": "events.amazonaws.com",
        "SourceArn": {
          "Fn::GetAtt": [
            "KeyRotationSchedule19A31C3E",
            "Arn",
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "SecretsGithubWebhookSecretA73A31FD": {
      "DeletionPolicy": "Retain",
      "Properties": {
        "Description": "Orbital prod - GitHub webhook HMAC verification secret.",
        "GenerateSecretString": {
          "ExcludeCharacters": " 	

"'\\",
          "ExcludePunctuation": true,
          "ExcludeUppercase": false,
          "IncludeSpace": false,
          "PasswordLength": 64,
        },
        "KmsKeyId": {
          "Fn::GetAtt": [
            "SecretsHubMasterKeyKmsCmkDAD54FF7",
            "Arn",
          ],
        },
        "Name": "orbital/prod/github-webhook-secret",
        "Tags": [
          {
            "Key": "orbital:component",
            "Value": "secrets",
          },
        ],
      },
      "Type": "AWS::SecretsManager::Secret",
      "UpdateReplacePolicy": "Retain",
    },
    "SecretsHubMasterKeyKmsCmkAlias36429E7C": {
      "Properties": {
        "AliasName": "alias/orbital-prod-hub-secrets",
        "TargetKeyId": {
          "Fn::GetAtt": [
            "SecretsHubMasterKeyKmsCmkDAD54FF7",
            "Arn",
          ],
        },
      },
      "Type": "AWS::KMS::Alias",
    },
    "SecretsHubMasterKeyKmsCmkDAD54FF7": {
      "DeletionPolicy": "Retain",
      "Properties": {
        "Description": "Orbital hub master key + cognito secret CMK - prod",
        "EnableKeyRotation": true,
        "KeyPolicy": {
          "Statement": [
            {
              "Action": "kms:*",
              "Effect": "Allow",
              "Principal": {
                "AWS": {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":iam::123456789012:root",
                    ],
                  ],
                },
              },
              "Resource": "*",
            },
            {
              "Action": [
                "kms:Decrypt",
                "kms:Encrypt",
                "kms:ReEncrypt*",
                "kms:GenerateDataKey*",
              ],
              "Condition": {
                "StringEquals": {
                  "kms:ViaService": "secretsmanager.us-east-1.amazonaws.com",
                },
              },
              "Effect": "Allow",
              "Principal": {
                "AWS": {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":iam::123456789012:root",
                    ],
                  ],
                },
              },
              "Resource": "*",
            },
            {
              "Action": [
                "kms:CreateGrant",
                "kms:DescribeKey",
              ],
              "Condition": {
                "StringEquals": {
                  "kms:ViaService": "secretsmanager.us-east-1.amazonaws.com",
                },
              },
              "Effect": "Allow",
              "Principal": {
                "AWS": {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":iam::123456789012:root",
                    ],
                  ],
                },
              },
              "Resource": "*",
            },
            {
              "Action": "kms:Decrypt",
              "Condition": {
                "StringEquals": {
                  "kms:ViaService": "secretsmanager.us-east-1.amazonaws.com",
                },
              },
              "Effect": "Allow",
              "Principal": {
                "AWS": {
                  "Fn::GetAtt": [
                    "KeyRotationExecutionRole5679977C",
                    "Arn",
                  ],
                },
              },
              "Resource": "*",
            },
            {
              "Action": [
                "kms:Encrypt",
                "kms:ReEncrypt*",
                "kms:GenerateDataKey*",
              ],
              "Condition": {
                "StringEquals": {
                  "kms:ViaService": "secretsmanager.us-east-1.amazonaws.com",
                },
              },
              "Effect": "Allow",
              "Principal": {
                "AWS": {
                  "Fn::GetAtt": [
                    "KeyRotationExecutionRole5679977C",
                    "Arn",
                  ],
                },
              },
              "Resource": "*",
            },
          ],
          "Version": "2012-10-17",
        },
        "Tags": [
          {
            "Key": "orbital:component",
            "Value": "secrets",
          },
        ],
      },
      "Type": "AWS::KMS::Key",
      "UpdateReplacePolicy": "Retain",
    },
    "SecretsHubMasterKeySecret84067CE9": {
      "DeletionPolicy": "Retain",
      "Properties": {
        "Description": "Orbital prod hub Ed25519 master keypair (rotated every 90 days).",
        "GenerateSecretString": {
          "ExcludePunctuation": true,
          "GenerateStringKey": "rotationToken",
          "SecretStringTemplate": "{"uninitialized":true,"publicKey":"PENDING_ROTATION","privateKey":"PENDING_ROTATION"}",
        },
        "KmsKeyId": {
          "Fn::GetAtt": [
            "SecretsHubMasterKeyKmsCmkDAD54FF7",
            "Arn",
          ],
        },
        "Name": "orbital/prod/hub-master-key",
        "Tags": [
          {
            "Key": "orbital:component",
            "Value": "secrets",
          },
        ],
      },
      "Type": "AWS::SecretsManager::Secret",
      "UpdateReplacePolicy": "Retain",
    },
  },
  "Rules": {
    "CheckBootstrapVersion": {
      "Assertions": [
        {
          "Assert": {
            "Fn::Not": [
              {
                "Fn::Contains": [
                  [
                    "1",
                    "2",
                    "3",
                    "4",
                    "5",
                  ],
                  {
                    "Ref": "BootstrapVersion",
                  },
                ],
              },
            ],
          },
          "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.",
        },
      ],
    },
  },
  "Transform": "AWS::SecretsManager-2020-07-23",
}
`;

exports[`SecretsConstruct — snapshot with cognito secret matches snapshot 1`] = `
{
  "Outputs": {
    "KeyRotationKeyRotationLambdaArn46C8C71B": {
      "Description": "Orbital mwitt key-rotation Lambda ARN",
      "Export": {
        "Name": "OrbitalHub-mwitt-KeyRotationLambdaArn",
      },
      "Value": {
        "Fn::GetAtt": [
          "KeyRotationFn1D4F9646",
          "Arn",
        ],
      },
    },
    "KeyRotationKeyRotationScheduleName9F6010D1": {
      "Description": "Orbital mwitt key-rotation EventBridge schedule rule",
      "Export": {
        "Name": "OrbitalHub-mwitt-KeyRotationScheduleName",
      },
      "Value": {
        "Ref": "KeyRotationSchedule19A31C3E",
      },
    },
    "SecretsCognitoAppClientSecretArnDDE0C082": {
      "Description": "Orbital mwitt Cognito app client secret ARN",
      "Export": {
        "Name": "OrbitalHub-mwitt-CognitoAppClientSecretArn",
      },
      "Value": {
        "Ref": "SecretsCognitoAppClientSecret5164AAD9",
      },
    },
    "SecretsGithubWebhookSecretArn50A4CA7E": {
      "Description": "Orbital mwitt GitHub webhook secret ARN",
      "Export": {
        "Name": "OrbitalHub-mwitt-GithubWebhookSecretArn",
      },
      "Value": {
        "Ref": "SecretsGithubWebhookSecretA73A31FD",
      },
    },
    "SecretsHubMasterKeyKmsCmkArnA56548AF": {
      "Description": "Orbital mwitt hub-secrets KMS CMK ARN",
      "Export": {
        "Name": "OrbitalHub-mwitt-HubMasterKeyKmsCmkArn",
      },
      "Value": {
        "Fn::GetAtt": [
          "SecretsHubMasterKeyKmsCmkDAD54FF7",
          "Arn",
        ],
      },
    },
    "SecretsHubMasterKeySecretArn7A82A579": {
      "Description": "Orbital mwitt hub master key secret ARN",
      "Export": {
        "Name": "OrbitalHub-mwitt-HubMasterKeySecretArn",
      },
      "Value": {
        "Ref": "SecretsHubMasterKeySecret84067CE9",
      },
    },
  },
  "Parameters": {
    "BootstrapVersion": {
      "Default": "/cdk-bootstrap/hnb659fds/version",
      "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Resources": {
    "DbMasterSecret80A406EE": {
      "DeletionPolicy": "Delete",
      "Properties": {
        "Description": {
          "Fn::Join": [
            "",
            [
              "Generated by the CDK for stack: ",
              {
                "Ref": "AWS::StackName",
              },
            ],
          ],
        },
        "GenerateSecretString": {
          "ExcludeCharacters": " %+~\`#$&*()|[]{}:;<>?!'/@"\\",
          "GenerateStringKey": "password",
          "PasswordLength": 30,
          "SecretStringTemplate": "{"username":"orbital_admin"}",
        },
        "Name": "/orbital/mwitt/aurora/master-credentials",
      },
      "Type": "AWS::SecretsManager::Secret",
      "UpdateReplacePolicy": "Delete",
    },
    "DbMasterSecretDbMasterCredsRotation59EB30BB": {
      "Properties": {
        "HostedRotationLambda": {
          "ExcludeCharacters": " %+~\`#$&*()|[]{}:;<>?!'/@"\\",
          "RotationLambdaName": "orbital-mwitt-db-creds-rotation",
          "RotationType": "PostgreSQLSingleUser",
        },
        "RotationRules": {
          "ScheduleExpression": "rate(30 days)",
        },
        "SecretId": {
          "Ref": "DbMasterSecret80A406EE",
        },
      },
      "Type": "AWS::SecretsManager::RotationSchedule",
    },
    "DbMasterSecretPolicyFB68FF74": {
      "Properties": {
        "ResourcePolicy": {
          "Statement": [
            {
              "Action": "secretsmanager:DeleteSecret",
              "Effect": "Deny",
              "Principal": {
                "AWS": {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":iam::123456789012:root",
                    ],
                  ],
                },
              },
              "Resource": "*",
            },
          ],
          "Version": "2012-10-17",
        },
        "SecretId": {
          "Ref": "DbMasterSecret80A406EE",
        },
      },
      "Type": "AWS::SecretsManager::ResourcePolicy",
    },
    "KeyRotationExecutionRole5679977C": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "Description": "Orbital mwitt hub master key rotation Lambda role",
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
        "Tags": [
          {
            "Key": "orbital:component",
            "Value": "key-rotation",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "KeyRotationExecutionRoleDefaultPolicy6C56106F": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "secretsmanager:GetSecretValue",
                "secretsmanager:DescribeSecret",
              ],
              "Effect": "Allow",
              "Resource": {
                "Ref": "SecretsHubMasterKeySecret84067CE9",
              },
            },
            {
              "Action": [
                "secretsmanager:PutSecretValue",
                "secretsmanager:UpdateSecret",
              ],
              "Effect": "Allow",
              "Resource": {
                "Ref": "SecretsHubMasterKeySecret84067CE9",
              },
            },
            {
              "Action": [
                "kms:Decrypt",
                "kms:Encrypt",
                "kms:ReEncrypt*",
                "kms:GenerateDataKey*",
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::GetAtt": [
                  "SecretsHubMasterKeyKmsCmkDAD54FF7",
                  "Arn",
                ],
              },
            },
            {
              "Action": [
                "secretsmanager:UpdateSecretVersionStage",
                "secretsmanager:DescribeSecret",
              ],
              "Effect": "Allow",
              "Resource": {
                "Ref": "SecretsHubMasterKeySecret84067CE9",
              },
            },
            {
              "Action": [
                "secretsmanager:CreateSecret",
                "secretsmanager:PutSecretValue",
                "secretsmanager:GetSecretValue",
                "secretsmanager:DescribeSecret",
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    {
                      "Ref": "SecretsHubMasterKeySecret84067CE9",
                    },
                    ".prev*",
                  ],
                ],
              },
            },
            {
              "Action": "secretsmanager:CreateSecret",
              "Condition": {
                "StringLike": {
                  "secretsmanager:Name": "orbital/mwitt/hub-master-key.prev*",
                },
              },
              "Effect": "Allow",
              "Resource": "*",
            },
            {
              "Action": [
                "xray:PutTraceSegments",
                "xray:PutTelemetryRecords",
              ],
              "Effect": "Allow",
              "Resource": "*",
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "KeyRotationExecutionRoleDefaultPolicy6C56106F",
        "Roles": [
          {
            "Ref": "KeyRotationExecutionRole5679977C",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "KeyRotationFn1D4F9646": {
      "DependsOn": [
        "KeyRotationExecutionRoleDefaultPolicy6C56106F",
        "KeyRotationExecutionRole5679977C",
      ],
      "Properties": {
        "Code": {
          "S3Bucket": "cdk-hnb659fds-assets-123456789012-us-east-1",
          "S3Key": "48bd4184c0fe4b3c5bbe48286780b6c064a8d8cdcaf2a0d1a87b0b52b8e69805.zip",
        },
        "FunctionName": "orbital-mwitt-key-rotation",
        "Handler": "index.handler",
        "LoggingConfig": {
          "LogGroup": {
            "Ref": "KeyRotationLogGroupB19E1885",
          },
        },
        "MemorySize": 256,
        "Role": {
          "Fn::GetAtt": [
            "KeyRotationExecutionRole5679977C",
            "Arn",
          ],
        },
        "Runtime": "nodejs22.x",
        "Tags": [
          {
            "Key": "orbital:component",
            "Value": "key-rotation",
          },
        ],
        "Timeout": 120,
        "TracingConfig": {
          "Mode": "Active",
        },
      },
      "Type": "AWS::Lambda::Function",
    },
    "KeyRotationLogGroupB19E1885": {
      "DeletionPolicy": "Delete",
      "Properties": {
        "LogGroupName": "/orbital/mwitt/lambda/key-rotation",
        "RetentionInDays": 30,
        "Tags": [
          {
            "Key": "orbital:component",
            "Value": "key-rotation",
          },
        ],
      },
      "Type": "AWS::Logs::LogGroup",
      "UpdateReplacePolicy": "Delete",
    },
    "KeyRotationSchedule19A31C3E": {
      "Properties": {
        "Description": "Rotate the Orbital hub master key every 90 days.",
        "Name": "orbital-mwitt-key-rotation-schedule",
        "ScheduleExpression": "rate(90 days)",
        "State": "ENABLED",
        "Targets": [
          {
            "Arn": {
              "Fn::GetAtt": [
                "KeyRotationFn1D4F9646",
                "Arn",
              ],
            },
            "Id": "Target0",
            "InputTransformer": {
              "InputPathsMap": {
                "id": "$.id",
              },
              "InputTemplate": {
                "Fn::Join": [
                  "",
                  [
                    "{"Step":"full","SecretId":"",
                    {
                      "Ref": "SecretsHubMasterKeySecret84067CE9",
                    },
                    "","ClientRequestToken":<id>}",
                  ],
                ],
              },
            },
          },
        ],
      },
      "Type": "AWS::Events::Rule",
    },
    "KeyRotationScheduleAllowEventRuleTestSecretsStackmwittKeyRotationFn39D0ADC339CF47C2": {
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "KeyRotationFn1D4F9646",
            "Arn",
          ],
        },
        "Principal": "events.amazonaws.com",
        "SourceArn": {
          "Fn::GetAtt": [
            "KeyRotationSchedule19A31C3E",
            "Arn",
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
    "SecretsCognitoAppClientSecret5164AAD9": {
      "DeletionPolicy": "Delete",
      "Properties": {
        "Description": "Orbital mwitt Cognito app client secret.",
        "GenerateSecretString": {
          "ExcludePunctuation": false,
          "IncludeSpace": false,
          "PasswordLength": 48,
        },
        "KmsKeyId": {
          "Fn::GetAtt": [
            "SecretsHubMasterKeyKmsCmkDAD54FF7",
            "Arn",
          ],
        },
        "Name": "orbital/mwitt/cognito-app-client-secret",
        "Tags": [
          {
            "Key": "orbital:component",
            "Value": "secrets",
          },
        ],
      },
      "Type": "AWS::SecretsManager::Secret",
      "UpdateReplacePolicy": "Delete",
    },
    "SecretsGithubWebhookSecretA73A31FD": {
      "DeletionPolicy": "Delete",
      "Properties": {
        "Description": "Orbital mwitt - GitHub webhook HMAC verification secret.",
        "GenerateSecretString": {
          "ExcludeCharacters": " 	

"'\\",
          "ExcludePunctuation": true,
          "ExcludeUppercase": false,
          "IncludeSpace": false,
          "PasswordLength": 64,
        },
        "KmsKeyId": {
          "Fn::GetAtt": [
            "SecretsHubMasterKeyKmsCmkDAD54FF7",
            "Arn",
          ],
        },
        "Name": "orbital/mwitt/github-webhook-secret",
        "Tags": [
          {
            "Key": "orbital:component",
            "Value": "secrets",
          },
        ],
      },
      "Type": "AWS::SecretsManager::Secret",
      "UpdateReplacePolicy": "Delete",
    },
    "SecretsHubMasterKeyKmsCmkAlias36429E7C": {
      "Properties": {
        "AliasName": "alias/orbital-mwitt-hub-secrets",
        "TargetKeyId": {
          "Fn::GetAtt": [
            "SecretsHubMasterKeyKmsCmkDAD54FF7",
            "Arn",
          ],
        },
      },
      "Type": "AWS::KMS::Alias",
    },
    "SecretsHubMasterKeyKmsCmkDAD54FF7": {
      "DeletionPolicy": "Delete",
      "Properties": {
        "Description": "Orbital hub master key + cognito secret CMK - mwitt",
        "EnableKeyRotation": true,
        "KeyPolicy": {
          "Statement": [
            {
              "Action": "kms:*",
              "Effect": "Allow",
              "Principal": {
                "AWS": {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":iam::123456789012:root",
                    ],
                  ],
                },
              },
              "Resource": "*",
            },
            {
              "Action": [
                "kms:Decrypt",
                "kms:Encrypt",
                "kms:ReEncrypt*",
                "kms:GenerateDataKey*",
              ],
              "Condition": {
                "StringEquals": {
                  "kms:ViaService": "secretsmanager.us-east-1.amazonaws.com",
                },
              },
              "Effect": "Allow",
              "Principal": {
                "AWS": {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":iam::123456789012:root",
                    ],
                  ],
                },
              },
              "Resource": "*",
            },
            {
              "Action": [
                "kms:CreateGrant",
                "kms:DescribeKey",
              ],
              "Condition": {
                "StringEquals": {
                  "kms:ViaService": "secretsmanager.us-east-1.amazonaws.com",
                },
              },
              "Effect": "Allow",
              "Principal": {
                "AWS": {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":iam::123456789012:root",
                    ],
                  ],
                },
              },
              "Resource": "*",
            },
            {
              "Action": "kms:Decrypt",
              "Condition": {
                "StringEquals": {
                  "kms:ViaService": "secretsmanager.us-east-1.amazonaws.com",
                },
              },
              "Effect": "Allow",
              "Principal": {
                "AWS": {
                  "Fn::GetAtt": [
                    "KeyRotationExecutionRole5679977C",
                    "Arn",
                  ],
                },
              },
              "Resource": "*",
            },
            {
              "Action": [
                "kms:Encrypt",
                "kms:ReEncrypt*",
                "kms:GenerateDataKey*",
              ],
              "Condition": {
                "StringEquals": {
                  "kms:ViaService": "secretsmanager.us-east-1.amazonaws.com",
                },
              },
              "Effect": "Allow",
              "Principal": {
                "AWS": {
                  "Fn::GetAtt": [
                    "KeyRotationExecutionRole5679977C",
                    "Arn",
                  ],
                },
              },
              "Resource": "*",
            },
          ],
          "Version": "2012-10-17",
        },
        "Tags": [
          {
            "Key": "orbital:component",
            "Value": "secrets",
          },
        ],
      },
      "Type": "AWS::KMS::Key",
      "UpdateReplacePolicy": "Delete",
    },
    "SecretsHubMasterKeySecret84067CE9": {
      "DeletionPolicy": "Delete",
      "Properties": {
        "Description": "Orbital mwitt hub Ed25519 master keypair (rotated every 90 days).",
        "GenerateSecretString": {
          "ExcludePunctuation": true,
          "GenerateStringKey": "rotationToken",
          "SecretStringTemplate": "{"uninitialized":true,"publicKey":"PENDING_ROTATION","privateKey":"PENDING_ROTATION"}",
        },
        "KmsKeyId": {
          "Fn::GetAtt": [
            "SecretsHubMasterKeyKmsCmkDAD54FF7",
            "Arn",
          ],
        },
        "Name": "orbital/mwitt/hub-master-key",
        "Tags": [
          {
            "Key": "orbital:component",
            "Value": "secrets",
          },
        ],
      },
      "Type": "AWS::SecretsManager::Secret",
      "UpdateReplacePolicy": "Delete",
    },
  },
  "Rules": {
    "CheckBootstrapVersion": {
      "Assertions": [
        {
          "Assert": {
            "Fn::Not": [
              {
                "Fn::Contains": [
                  [
                    "1",
                    "2",
                    "3",
                    "4",
                    "5",
                  ],
                  {
                    "Ref": "BootstrapVersion",
                  },
                ],
              },
            ],
          },
          "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.",
        },
      ],
    },
  },
  "Transform": "AWS::SecretsManager-2020-07-23",
}
`;
